--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="utf-8">
     <title>Excursion</title>
     <link rel="stylesheet" href="./resources/style.css" type="text/css">
+    <link rel="title" href="./resources/images/camp.jpg" type="preload">
+    <link rel="title" href="./resources/videos/excursion.mp4" type="preloasd">
+
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">Download Excursion (Coming Soon!).</a>
+    <a href="">Download Excursion (Coming Soon!).</a>
+    <br></br>
+    <video src="./resources/videos/excursion.mp4" autoplay= true>
+    </video>
+    <br></br>
+
+    <h2>Your personal travel guide</h2>
+    <p>
+      Excursions remembers places you like, and recommends new points of
+      intrest for you.
+    </p>
+
+    <img src="./resources/images/camp.jpg" alt="YEs">
+    <br>
+    <br>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="image">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="">Download Excursion (Coming Soon!).</a>
+    <footer>©Excursion</footer>
+
 
 
   </body>
