--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>Discover hidden places in the world around you</h1>
     <a href="">Download Excursion (Coming Soon!).</a>
     <br></br>
-    <video src="./resources/videos/excursion.mp4" autoplay= true>
+    <video src="./resources/videos/excursion.mp4" autoplay muted loop>
+      autoplay
     </video>
     <br></br>
 
